--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,14 @@
     background-color: rgb(159, 247, 247);
 }
 
-.search_img {
+.searchForm__img {
     width: 30px;
     height: 30px;
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 5px;
 }
-.search_form {
+.searchForm {
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -19,7 +19,7 @@
     margin-top: 50px;
 }
 
-.search_input {
+.searchForm__input {
     border: none;
     height: 40px;
     font-size: 30px;
@@ -53,7 +53,7 @@ input {
     background-color: darksalmon;
 }
 
-.country-pic {
+.country__picture {
     width: 300px;
     height: 200px;
 }
@@ -72,7 +72,7 @@ p {
 h2, p {
     background-color: darksalmon;
 }
-.cards-container {
+.cardsContainer {
     margin-top: 50px;
     margin-bottom: 50px;
     display: grid;
