--- a/src/styles.css
+++ b/src/styles.css
@@ -1,114 +1,131 @@
 * {
-    background-color: antiquewhite;
+  background-color: antiquewhite;
 }
 
-.input{
-    margin-right: 16px;
-    
+.input {
+  margin-right: 16px;
 }
 
 .search-gr > input {
-    margin-right: 16px;
+  margin-right: 16px;
 }
 
 .radios label {
-    display: block;
-    font-size: 18px;
-    color:rgb(68, 6, 83)
+  display: block;
+  font-size: 18px;
+  color: rgb(68, 6, 83);
 }
 
-.input__search, .kolvoarts_input, .button_search, .nom_str {
-    border: 2px solid #ebbfd57e;
-		border-radius: 3px;
-		-webkit-border-radius: 3px;
-		-moz-border-radius: 3px;
-		-khtml-border-radius: 3px;
-		background:rgba(218, 177, 206, 0.795) !important;
-		outline: none;
-		height: 30px;
-		width: 200px;
-		color: #000000;
-		font-size: 18px;
-		font-family: Tahoma;
-        margin-left: 10px;
+.input__search,
+.kolvoarts_input,
+.button_search,
+.page_number {
+  border: 2px solid #ebbfd57e;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  background: rgba(218, 177, 206, 0.795) !important;
+  outline: none;
+  height: 30px;
+  width: 200px;
+  color: #000000;
+  font-size: 18px;
+  font-family: Tahoma;
+  margin-left: 10px;
 }
 
 .search {
-    display: flex;
-    width: 400px;
-	margin: 0 auto;
+  display: flex;
+  width: 400px;
+  margin: 0 auto;
 }
 
-.search_text, .sort_text {
-    color: #5e0a0a; font-family: ‘Trocchi’, serif; font-size: 30px; font-weight: normal; line-height: 48px; margin-top: -5px;
+.search_text,
+.sort_text {
+  color: #5e0a0a;
+  font-family: ‘Trocchi’, serif;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 48px;
+  margin-top: -5px;
 }
 
 .sort_text {
-    font-size: 20px;
-    margin: 0;
+  font-size: 20px;
+  margin: 0;
 }
 .kolvoarts {
-    display: flex;
-    margin-top: 20px;
+  display: flex;
+  margin-top: 20px;
 }
 .kolvoarts_text {
-    color: #5e0a0a;
-    font-size: 18px;
+  color: #5e0a0a;
+  font-size: 18px;
 }
 .kolvoarts_input {
-		width: 50px;
-        height: 20px;
-        font-size: 14px;
+  width: 50px;
+  height: 20px;
+  font-size: 14px;
 }
 .button {
-    margin: 0 auto;
-    width: 150px;
-    margin-bottom: 30px;
+  margin: 0 auto;
+  width: 150px;
+  margin-bottom: 30px;
 }
 .button_search {
-    width: 150px;
-    height: 40px;
+  width: 150px;
+  height: 40px;
 }
-.kolvostr,  .nomstr_text {
-    color: #5e0a0a;
-    font-size: 18px;
+.kolvostr,
+.nomstr_text {
+  color: #5e0a0a;
+  font-size: 18px;
 }
 .str {
-    display: flex;
-    margin-top: 20px;
+  display: flex;
+  margin-top: 20px;
 }
-.nom_str {
-    width: 50px;
-    height: 20px;
-    font-size: 14px;
+.page_number {
+  width: 50px;
+  height: 20px;
+  font-size: 14px;
 }
 
 .picture {
-    width: 600px;
+  width: 600px;
 }
 .header_table {
-    font-size: 20px;
-    font-style: initial;
-    font-weight:bold;
+  font-size: 20px;
+  font-style: initial;
+  font-weight: bold;
 }
 .title {
-    width: 500px;
-    font-style: unset;
-    font-size: 20px;
+  width: 500px;
+  font-style: unset;
+  font-size: 20px;
 }
 .author {
-    width: 100px;
-    font-style: unset;
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 20px;
+  width: 100px;
+  font-style: unset;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 20px;
 }
 .date {
-    width: 200px;
-    font-style: unset;
-    font-size: 18px;
+  width: 200px;
+  font-style: unset;
+  font-size: 18px;
 }
 table {
-    width: auto;
-    margin: 0 auto;
+  width: auto;
+  margin: 0 auto;
+}
+
+table {
+  border: "1px solid #555";
+}
+
+tr {
+  border: "1px solid #888";
 }
